--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
         // Construct the LinkedIn URL
-        const certUrl = encodeURIComponent(`https://mind.in.th/afmasterclass?certificate=${hashcertificateid}`);
+        const certUrl = encodeURIComponent(`https://mind.in.th/afmasterclass-uat?certificate=${hashcertificateid}`);
         const linkedinUrl = `https://www.linkedin.com/profile/add?startTask=CERTIFICATION_NAME&name=AppsFlyer%20MasterClass&organizationId=2233984&issueYear=${issueYear}&issueMonth=${issueMonth}&certUrl=${certUrl}&certId=${certificateID}&expirationYear=${expiryYear}&expirationMonth=${expiryMonth}`;
 
         // 
